--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ navVersion = "2.9.6"
 hilt = "2.57.2"
 hiltNavigation = "1.3.0"
 coreSplashscreen = "1.2.0"
+uiTextGoogleFonts = "1.9.4"
 
 [libraries]
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
@@ -61,6 +62,7 @@ androidx-material3-window = { group = "androidx.compose.material3", name = "mate
 androidx-material3-nav = { group = "androidx.compose.material3", name = "material3-adaptive-navigation-suite", version.ref="material3Nav"}
 material-icons-core = { module = "androidx.compose.material:material-icons-core", version.ref = "material-icons-core" }
 material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "material-icons-extended" }
+androidx-compose-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
