--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,8 +20,7 @@ material-icons-extended = "1.7.8"
 coilComposeVersion = "2.7.0"
 ktorVersion = "3.3.2"
 navVersion = "2.9.6"
-hilt = "2.57.2"
-hiltNavigation = "1.3.0"
+koin = "4.1.1"
 coreSplashscreen = "1.2.0"
 uiTextGoogleFonts = "1.9.4"
 composeShimmer = "1.3.3"
@@ -30,10 +29,10 @@ playFeatureDelivery = "2.1.0"
 [libraries]
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 
-# Hilt
-hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt"}
-hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt"}
-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref ="hiltNavigation" }
+# Koin
+koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
+koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
+
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilComposeVersion" }
 
 # Ktor
@@ -86,7 +85,6 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-dagger-hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 android-dynamic-feature = { id = "com.android.dynamic-feature", version.ref = "agp" }
 
 [bundles]
